# lumina-iot

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml  start.py
api/src/: __init__.py  auth.py  db.py  main.py  mqtt.py  services.py
api/src/templates/: base.html
api/src/templates/partials/: device_card.html
mcp-server/: pyproject.toml  server.py
mosquitto/: mosquitto.conf
ui/: Dockerfile  pyproject.toml
ui/scripts/: create_user.py
ui/src/: api_client.py  auth.py  db.py  main.py
ui/src/templates/: dashboard.html  login.html
