[project]
name = "lumina-ui"
version = "0.1.0"
description = "UI service for Lumina IoT LED controller"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
]
